  Hunted down a bunch of non-final methods and finalized them
  DefaultEntity bug fixed, did not validate values for foreign key properties correctly
  DefaultForeignKeyProperty.getTypeClass() now returns Entity.class
  DefaultForeignKeyProperty overrides DefaultProperty.validateType() and validates correctly
  Gradle upgraded to 6.0
  Entity.Definition.setTableName() removed
  Entity.Definer added, implemented in DefaultEntityDefinition.DefaultEntityDefiner
  Domain.define() now returns a Entity.Definer instead of the Entity.Definition
  Entity.Definition, setters removed, now private in DefaultEntityDefinition
  Domain, most getters moved to Entity.Definition, Domain.getDefinition() public
  Major refactoring, domain.property package added
  EntityEditModel.getEntityDefinition() and EntityTableModel.getEntityDefinition() added
  DefaultEntityDefinition.EntityDefinitionBuilder renamed to DefaultDefinitionBuilder and refactored
  PropertyBuilder now inner classe of relevant Property
  PropertyBuilder implementations now inner classes of relevant Property implementation
  Entity.DefinitionBuilder moved to Entity.Definition and rename Builder, for consistency
  Code cleanup
  DefaultColumnProperty, DefaultForeignKeyProperty, DefaultTransientProperty, builder() method added, Builder implementations now completely privat
  DefaultEntityDefinition.builder() method added, Builder implementation now private
  StringProvider.ForeignKeyValueProvider now uses foreignKeyPropertyId instead of the actual ForeignKeyProperty
  Some code cleanup and inner class renamings
  Removed the unholy mess that was property builder generics
  Further property builder refactoring
  DefaultProperty, bug fixed, used lambda for defaultValueProvider, which caused serialization problems
  Entity.Definition.getColumnProperties() parameter now List instead of Collection, implementation now uses old fashioned loop instead of stream