@@ -5276,3 +5276,4 @@
   Further property builder refactoring
   DefaultProperty, bug fixed, used lambda for defaultValueProvider, which caused serialization problems
   Entity.Definition.getColumnProperties() parameter now List instead of Collection, implementation now uses old fashioned loop instead of stream
+  Conditions.customCondition() parameter ordering changed
